remove unused functions and fix warnings